# MEF

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.en.md  README.md  go.mod  go.sum
om-sdk/platform/MindXOM_SDK/: .gitmodules  pyproject.toml
om-sdk/platform/MindXOM_SDK/ci/: cmcDownCode_cmslib.json  cmcDownCode_securec.json  mindxom_dep.xml  opensource.xml
om-sdk/platform/MindXOM_SDK/config/: nginx.conf
om-sdk/platform/MindXOM_SDK/src/: CMakeLists.txt
om-sdk/platform/MindXOM_SDK/src/app/sys/: __init__.py
om-sdk/platform/MindXOM_SDK/src/app/sys/RedfishServer/: extend_interfaces.py  fd_extend_interfaces.py  ibma_client.py  ibma_redfish_globals.py  ibma_redfish_main.py  (+10 more)
om-sdk/platform/MindXOM_SDK/src/cpp/: CMakeLists.txt
om-sdk/platform/MindXOM_SDK/src/cpp/alarm_process/: alarm_process.c  alarm_process.h  alarm_shield.c
om-sdk/platform/MindXOM_SDK/src/cpp/certmanage/: CMakeLists.txt  certproc.c  certproc.h  create_cert.c
om-sdk/platform/MindXOM_SDK/src/cpp/cms_verify/: CMakeLists.txt  cms_api.c  cms_api.h  upgrade_cmscbb_callback.c
om-sdk/platform/MindXOM_SDK/src/cpp/common/: base_type.h  file_checker.c  file_checker.h  log_common.c  log_common.h
om-sdk/platform/MindXOM_SDK/src/cpp/devm/: CMakeLists.txt  devm.c
om-sdk/platform/MindXOM_SDK/src/cpp/ens/: ensd.c
om-sdk/platform/MindXOM_SDK/src/cpp/extend_alarm/: check_extend_alarm.c  check_extend_alarm.h  extend_alarm.c  extend_alarm.h
om-sdk/platform/MindXOM_SDK/src/cpp/fault_check/: check_cert.c  check_mount.c  check_space.c  fault_check.c  fault_check.h
om-sdk/platform/MindXOM_SDK/src/cpp/lpeblock/: lpeblock.c  lpeblock.h
om-sdk/platform/MindXOM_SDK/src/scripts/: common_os_adapter.sh  iBMA.sh  ibma_edge_start_post.sh  install.sh  migrate.sh  nginx_init.sh  nginx_monitor.sh  nginx_post.sh  om_init.sh  platform_init_pre.sh  service_monitor.sh  start_nginx.sh  stop_nginx.sh  stop_redfish.sh  uninstall.sh
om-sdk/platform/MindXOM_SDK/src/scripts/python/: backup_restore_service.py  copy_om_sys_file.py  create_server_certs.py  effect_mef.py  extend_storage_config.py  install.py  log_tar_save.py  logger.py  modify_time_zone.py  mount_white_path.py  nginx_cert_manage.py  om_ability_policy.py  prepare_docker_root_dir.py  start_nginx.py  upgrade_om.py  utils.py
om-sdk/platform/MindXOM_SDK/src/service_main/: om-init.service
om-sdk/platform/MindXOM_SDK/test/C++/DT/: run_dt.sh
om-sdk/platform/MindXOM_SDK/test/C++/include/: test_alarm_process.h  test_cert.h  test_cms.h  test_ens.h  test_file_checker.h  test_lpe_block.h
om-sdk/platform/MindXOM_SDK/test/C++/src/: CMakeLists.txt  test_alarm_process.cpp  test_cert.cpp  test_cms.cpp  test_ens.cpp  test_file_checker.cpp  test_lpe_block.cpp  test_main.cpp
om-sdk/platform/MindXOM_SDK/test/python/DT/: requirements.txt  run_dt.sh
om-sdk/platform/MindXOM_SDK/test/python/llt_src/: __init__.py  test_redfish_execcmd.py
om-sdk/platform/MindXOM_SDK/tools/: certs_manage.sh  mount_white_path  om_ability_policy.sh
(+3356 files in other folders)
