[tool.poetry]
name = "hw-mindx-omsdk"
version = "0.1.0"
description = ""
authors = ["pAtlasCIAccount <atlasciaccount@huawei.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "cmcrepo"
url = "https://cmc.centralrepo.rnd.huawei.com/artifactory/pypi-central-repo/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "3.11.4"
flask = "3.1.1"
urllib3 = "2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
